# tripodhub

./: .gitignore  LICENSE  README.md  manual.txt  pyproject.toml
.github/workflows/: workflow.yml
src/ml_lab_programs/: __init__.py  cli.py  lab01.py  lab02.py  lab03.py  lab04.py  lab05.py  lab06.py  lab07.py  lab08.py  lab09.py  lab10.py
src/ml_lab_programs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tripodhub/: __init__.py  cli.py  code_templates.py  lab01.py  lab02.py  lab03.py  lab04.py  lab05.py  lab06.py  lab07.py  lab08.py  lab09.py  lab10.py
src/tripodhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
