[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripodhub"
version = "0.1.0"
description = "A pip-installable collection of 10 machine learning lab programs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "aadit" }
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "seaborn>=0.13"
]
keywords = ["machine-learning", "labs", "education", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://example.com/ml-lab-programs"

[project.scripts]
ml-lab = "tripodhub.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tripodhub*"]
